--- a/src/Applications/MultiAlign/app.config
+++ b/src/Applications/MultiAlign/app.config
@@ -1,18 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="MultiAlign.Workspace" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="MultiAlign.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="MultiAlign.Workspace" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="MultiAlign.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <userSettings>
     <MultiAlign.Workspace>
       <setting name="Setting" serializeAs="String">
-        <value />
+        <value/>
       </setting>
     </MultiAlign.Workspace>
     <MultiAlign.Properties.Settings>
@@ -20,10 +20,10 @@
         <value>m:\data\proteomics\MAPaper\data\</value>
       </setting>
       <setting name="SingleDatasetPath" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="InputFilePath" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="WorkspaceFile" serializeAs="String">
         <value>workspace.xml</value>
@@ -33,16 +33,16 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.99.0" newVersion="1.0.99.0" />
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.99.0" newVersion="1.0.99.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0" />
+        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="OxyPlot.Wpf" publicKeyToken="75e952ba404cdbb0" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0" />
+        <assemblyIdentity name="OxyPlot.Wpf" publicKeyToken="75e952ba404cdbb0" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
