--- a/src/Applications/MultiAlignConsole/app.config
+++ b/src/Applications/MultiAlignConsole/app.config
@@ -1,21 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.99.0" newVersion="1.0.99.0" />
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.99.0" newVersion="1.0.99.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0" />
+        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="OxyPlot.Wpf" publicKeyToken="75e952ba404cdbb0" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0" />
+        <assemblyIdentity name="OxyPlot.Wpf" publicKeyToken="75e952ba404cdbb0" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2015.1.2000.0" newVersion="1.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
